--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "56093626-531e-481b-95a5-d4fa3ef81206"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
