--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "votaca-desafio",
   "version": "0.0.0",
+  "main": "src/server.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -18,6 +19,14 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jquery": "^3.6.0",
+    "knex": "^0.95.6",
+    "nodemon": "^2.0.11",
+    "pg": "^8.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
