--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "votaca-desafio",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "main": "src/server.js",
   "scripts": {
     "ng": "ng",
@@ -19,16 +19,14 @@
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
-    "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
-    "knex": "^0.95.6",
     "nodemon": "^2.0.11",
-    "pg": "^8.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "webpack": "^5.44.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -36,7 +34,7 @@
     "@angular/cli": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.16",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -44,5 +42,15 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "typescript": "~4.3.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PedroGabrielM/votacao-desafio.git"
+  },
+  "author": "Pedro",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/PedroGabrielM/votacao-desafio/issues"
+  },
+  "homepage": "https://github.com/PedroGabrielM/votacao-desafio#readme"
 }
