--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
               "src/styles.css"
             ],
             "scripts": [
+              "src/scripts.js",
               "node_modules/jquery/dist/jquery.js",  
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
